Fix [Jobs] Results tab - layout issue (#1343)

--- a/src/components/DetailsResults/detailsResults.scss
+++ b/src/components/DetailsResults/detailsResults.scss
@@ -3,9 +3,10 @@
 @import '~igz-controls/scss/mixins';
 
 .table__item-results {
+  flex: 1;
   position: relative;
+  overflow: auto;
   width: 100%;
-  padding: 0 24px;
 
   .results-table {
     position: relative;
@@ -13,7 +14,6 @@
     flex-direction: column;
     align-items: flex-start;
     width: 100%;
-    overflow-x: auto;
     text-align: left;
 
     &__row {
@@ -24,6 +24,19 @@
       &:hover {
         background-color: $alabaster;
       }
+
+      & > *:first-child {
+        padding-left: 40px;
+      }
+    }
+
+    &__body {
+      flex: 1;
+    }
+
+    &__body,
+    &__header {
+      min-width: 100%;
     }
 
     &__header {
@@ -34,11 +47,13 @@
 
       &-item {
         display: flex;
-        flex: 1;
+        flex: 0 0 150px;
         flex-direction: column;
         width: 150px;
 
         @include tableHeader(16px);
+
+        padding: 5px 15px 5px 25px;
       }
 
       .results-table__row:hover {
@@ -48,10 +63,10 @@
 
     &__cell {
       display: flex;
-      flex: 1;
+      flex: 0 0 150px;
       flex-direction: column;
       width: 150px;
-      padding: 19px 20px;
+      padding: 19px 15px 19px 25px;
     }
 
     i {
@@ -67,7 +82,7 @@
       svg {
         position: absolute;
         top: 15px;
-        left: -5px;
+        left: 8px;
       }
     }
   }
